fix: 💄 fixed text alignment

--- a/assets/scss/_desktop.scss
+++ b/assets/scss/_desktop.scss
@@ -216,7 +216,7 @@
       text-align: center;
 
       h1{
-        text-align: center;
+        text-align: left;
       }
 
       *:nth-child(even) {
